can't get different ajax responses for each city

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Yn jQuery plugin</title>
+  <title>Yn jQuery weather plugin</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
   <script src="js/jquery.temperature.js" defer></script>
   <script src="js/script.js" defer></script>
 </head>
 <body>
-  <h1>Yn jQuery plugin</h1>
+  <h1>Yn jQuery weather plugin</h1>
   <ul>
     <li>1. London.</li>
     <li>2. Paris.</li>
