--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <li>3. Ivanovo.</li>
     <li>4. Boston.</li>
     <li>5. Canberra.</li>
+    <li>6. Ottawa.</li>
+    <li>7. Norilsk. </li>
   </ul>
 </body>
 </html>
