Added Ajax error handling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Yn jQuery weather plugin</h1>
-  <ul>
+  <ul class="citiesList">
     <li>1. London.</li>
     <li>2. Paris.</li>
     <li>3. Ivanovo.</li>
